--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     color: white;
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
    
 }
 
@@ -82,3 +83,5 @@
     border-bottom-right-radius: 4px;
     color: #0f1111;
 }
+
+/* Fourth box of navigation bar i.e language icon! */
