--- a/style.css
+++ b/style.css
@@ -120,3 +120,10 @@ span{
 }
 
 /* Sixth item of navigation bar i.e cart */
+.nav-cart i{
+    font-size: 30px;
+}
+.nav-cart{
+    font-size: 14px;
+    font-weight: 700;
+}
