--- a/style.css
+++ b/style.css
@@ -127,3 +127,23 @@ span{
     font-size: 14px;
     font-weight: 700;
 }
+
+
+/* Panel */
+.panel{
+    height:40px;
+    background-color: #222f3d;
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: space-evenly;
+    
+}
+.panel-options p{
+    display: inline;
+    margin-left: 10px;
+    
+}
+.panel-deals{
+   font-weight: 700;
+}
