--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ span{
     align-items: center;
     justify-content: space-evenly;
     
+    
 }
 .panel-options p{
     display: inline;
@@ -150,33 +151,46 @@ span{
 
 
 /* Main-Section */
-.Main-section{
+ .Main-section{
     background-image: url("MainSection.jpg") ;
-    height: 600px;
+    height: 400px;
     background-size: cover;
     display: flex;
     justify-content: center;
     
     
-}
+} 
 
-/* Main-Section */
+/* content-Section */
 .content-section{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     background-color: #e2e7e6;
-}
-.box{
-    border: 2px solid black;
+} 
+
+ .box{
+    
     height: 400px;
     width: 23%;
     background-color: white;
-    margin-bottom: 100px;
-    position: relative; 
+    padding: 20px 0px 15px;
+    margin-top: 15px;
+    
+} 
+.box-image{
+    height: 300px;
+    background-size: cover;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+
+    
 }
-.box-img{
-    height: 220px;
-    width: 240px;
-    margin-top: 100px;
-    margin-left: 60px; 
+.box-content{
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
+.box-content p{
+    color: #007185;
+}
+
