--- a/style.css
+++ b/style.css
@@ -194,3 +194,17 @@ span{
     color: #007185;
 }
 
+/* footer */
+footer{
+    margin-top: 15px ;
+}
+.foot-panel1{
+    background-color: #374758;
+    color: white;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.8rem;
+    text-decoration: none;
+}
