--- a/style.css
+++ b/style.css
@@ -213,8 +213,49 @@ footer{
     color: white;
     height: 500px;
     display: flex;
+    justify-content: space-evenly;
+}
+ul{
+    margin-top: 30px;
 }
 ul a {
     display: block;
+    font-size: 0.88rem;
+    margin-top: 10px;
+    color: #DDDDDD;
+}
 
+/* footer panel 3 */
+.footpanel3{
+    background-color:#222f3d;
+    color: white;
+    border-top: 0.5px solid white;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo{
+    background-image: url( "amazon_logo.png");
+    background-size: cover;
+    height: 50px;
+    width: 100px;
+}
+
+/* footer panel 4 */
+.footpanel4{
+    background-color: #0f1111;
+    color: white;
+    height: 80px;
+    font-size: 0.7rem;
+   text-align: center;
+}
+
+.pages{
+    padding-top: 25px;
+}
+
+.copyright{
+    padding-top: 5px;
 }
